--- a/src/app/view/manageuser/manageuser.component.html
+++ b/src/app/view/manageuser/manageuser.component.html
@@ -17,7 +17,7 @@
         </div>
         <!-- <button (click)="openaddperson()" class="btn btn-add">
           <i class="fa fa-plus"></i> &nbsp;เพิ่มผู้ใช้งาน</button> -->
-          <button (click)="openAddPersonModal()" class="btn btn-add">
+          <button (click)="openaddperson()" class="btn btn-add">
        เพิ่มผู้ใช้งาน</button>
       </div>
       <div class="card-body">
