--- a/src/app/view/manageagency/manageagency.component.html
+++ b/src/app/view/manageagency/manageagency.component.html
@@ -2,29 +2,21 @@
   <nav aria-label="breadcrumb">
     <ol class="breadcrumb">
       <li class="breadcrumb-item"><a [routerLink]="['/dashboard']">หน้าหลัก</a></li>
-      <li class="breadcrumb-item active"><a aria-current="page" > จัดการองค์กร</a></li>
+      <li class="breadcrumb-item active"><a aria-current="page" > จัดการข้อมูลหน่วยงาน</a></li>
     </ol>
   </nav>
   <div class="container-fluid">
     <div class="card">
       <div class="card-header "><!--card-header-danger-->
         <div class="card-title">  
-<<<<<<< HEAD
-          <a href=""> จัดการรายชื่อองค์กร</a>
-=======
-          <a href=""> จัดการข้อมูลองค์กร</a>
->>>>>>> da1633fd364d8ca8e442938e6980c44702b1584a
+          <a href=""> จัดการข้อมูลหน่วยงาน</a>
         
           <!-- <div class="sub-title">
             แสดงรายชื่อผู้ใช้งาน
           </div> -->
         </div>
-<<<<<<< HEAD
-        <button (click)="openaddagency()" class="btn btn-add">เพิ่มรายชื่อองค์กร</button>
-=======
         <button (click)="openaddagency()" class="btn btn-add">
-        เพิ่มข้อมูลองหน่อยงาน</button>
->>>>>>> da1633fd364d8ca8e442938e6980c44702b1584a
+        เพิ่มข้อมูลหน่อยงาน</button>
       </div>
       <div class="card-body">
         <table width="100%" datatable [dtOptions]="dtOptions" class="table table-striped table-bordered" *ngIf="!loading">
