--- a/src/app/view/dashboard/dashboard.component.html
+++ b/src/app/view/dashboard/dashboard.component.html
@@ -112,9 +112,9 @@
 
 
 
-        <div class="row" *ngIf="isAdmin" >
+        <div class="row"  >
           <!-- เอกสารทั้งหมด -->
-          <div class="col-md-3">
+          <div class="col-md-3"*ngIf="isAdmin">
             <div class="card Box1">
               <div class="card-body">
                 <div class="d-flex justify-content-between align-items-center">
