--- a/src/app/view/manageagency/manageagency.component.html
+++ b/src/app/view/manageagency/manageagency.component.html
@@ -16,7 +16,9 @@
           </div> -->
         </div>
         <button (click)="openaddagency()" class="btn btn-add">
-        เพิ่มข้อมูลหน่อยงาน</button>
+        เพิ่มข้อมูลหน่วยงาน</button>
+        <!-- <button (click)="openAddAgencyModal()" class="btn btn-add">
+          เพิ่มข้อมูลหน่วยงาน</button> -->
       </div>
       <div class="card-body">
         <table width="100%" datatable [dtOptions]="dtOptions" class="table table-striped table-bordered"
@@ -57,7 +59,7 @@
               <div class="modal-header" class="card-header">
                 <h5 class="modal-title" id="addItemModalLabel"
                   style="color: rgb(0, 0, 0); font-family: 'Sarabun', sans-serif !important; font-size: 18px; font-weight: 900;">
-                  เพิ่มข้อมูลหน่อยงาน</h5>
+                  เพิ่มข้อมูลหน่วยงาน</h5>
 
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close" style="color: black;">
                   <span aria-hidden="true">&times;</span>
