--- a/src/app/view/manageuser/manageuser.component.css
+++ b/src/app/view/manageuser/manageuser.component.css
@@ -46,7 +46,7 @@ h4{
 .toggle-switch{
   position: relative;
   background-color: #ccc;
-  width: 90px;
+  width: 50px;
   height: 25px;
   border-radius: 20px;
   cursor: pointer;
@@ -68,7 +68,7 @@ input:checked + .toggle-switch{
   background-color: #4caf50;
 }
 input:checked + .toggle-switch::before{
-  transform: translateX(65px);
+  transform: translateX(25px);
 
 }
 input:not(:checked) + .toggle-switch {
@@ -270,4 +270,18 @@ td select option {
   font-family: 'Sarabun', sans-serif;
   font-size: 14px;
   color: black;
+}
+
+
+.custom-role-display {
+width: 100%;
+padding:3.2px 32px;
+font-size: 14px;
+text-align: center;
+border: 1px solid #ccc;
+border-radius: 32px;
+background-color: white;
+font-family: 'Sarabun', sans-serif;
+color: black;
+transition: background-color 0.3s, border-color 0.3s;
 }
